# Efficient-Model-Stitching

./: .gitignore  2023-10-20-Stitching-Pretrained-Imagenet.ipynb  2023-11-03-Stitching-Pretrained-Seg-rerun.ipynb  2023-11-03-Stitching-Pretrained-Seg.ipynb  2023-11-13-Stitching-Pretrained-Seg-opt.ipynb  2023-11-23-Stitching-Pretrained-ImageNet-opt.py  2023-11-29-compute-stitch-reference-solutions.py  2023-12-04-optimize-stitch.py  2023-12-19-experiment-determine-popsize-segmentation.txt  2023-12-19-experiment-determine-popsize.txt  2023-12-19-experiment-imagenet-a.txt  2023-12-19-experiment-voc.txt  2023-12-25-run-exp-voc-final.sh  2024-01-02-process-run-data.ipynb  2024-01-03-process-reeval-data.ipynb  2024-01-03-reevaluate-cmds.txt  2024-01-04-Stitching-Pretrained-Imagenet-b.ipynb  2024-01-04-compute-stitch-reference-solutions-imagenet-b.py  2024-01-04-experiment-determine-popsize-imagenet-b.txt  2024-01-04-plot-retrain.ipynb  2024-01-09-experiment-imagenet-b.txt  2024-01-09-reeval-logits.txt  2024-01-15-reeval-imagenet-b.txt  2024-03-26-extended-cx-graph.ipynb  2024-03-26-inactive-distribution-analysis.ipynb  README.md  environment.yml  optimizestitchutils.py  update_conda_from_yml.sh
EAlib/: .clang-tidy  .gitignore  README.md  conanfile.asan.py  conanfile.old.py  conanfile.txt  conanfile.unity.py  install.sh  install_debug.sh  install_debug_asan.sh  meson-native-patch.py  meson.build
EAlib/ealib/: __init__.py  decentralized_utilities.py
EAlib/include/: acceptation_criteria.hpp  archive.hpp  base.hpp  cppassert.h  d-ga.hpp  d-gomea.hpp  decentralized.hpp  decentralized_py.hpp  dispatcher.hpp  ecga.hpp  ga.hpp  gomea.hpp  initializers.hpp  kernels.hpp  logging.hpp  problems.hpp  rpc.h  running.hpp  scalarize.hpp  sim-gomea.hpp  sim.hpp  utilities.hpp
EAlib/instances/: README.md
EAlib/instances/maxcut/: origin.md
EAlib/python_examples/: example_ims.py
EAlib/rpc/: ealib.proto
EAlib/src/: acceptation_criteria.cpp  archive.cpp  base.cpp  d-ga.cpp  d-gomea.cpp  decentralized.cpp  ecga.cpp  ga.cpp  gomea.cpp  initializers.cpp  kernels.cpp  problems.cpp  python.cpp  running.cpp  scalarize.cpp  sim-ga.cpp  sim-gomea.cpp  sim.cpp
EAlib/src/python/: acceptation_criteria.cpp  archive.cpp  base.cpp  d_ga.cpp  d_gomea.cpp  decentralized.cpp  ecga.cpp  gomea.cpp  initializers.cpp  logging.cpp  problems.cpp  running.cpp  sim-gomea.cpp  sim.cpp
EAlib/test/: grpc_test_helpers.hpp  mocks_archive.hpp  mocks_base_ea.hpp  mocks_decentralized.hpp  mocks_gomea.hpp  test_acceptation_criteria.cpp  test_archive.cpp  test_d_ga.cpp  test_d_gomea.cpp  test_decentralized.cpp  test_dispatcher.cpp  test_gomea.cpp  test_initializers.cpp  test_problems.cpp  test_sim-gomea.cpp  test_sim.cpp
recomb/: cx.py  datasets.py  eval_costs.py  evaltools.py  fmsimilarity.py  ga.py  layers.py  learning.py  ls.py  pqueue.py  problems.py  test_layers.py  utils.py
